Bug 123259 - "Remember Away Messages" spinbox not connected to Apply button
Summary: "Remember Away Messages" spinbox not connected to Apply button
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: SVN
Platform: Slackware Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-03-08 07:14 UTC by P B
Modified: 2006-03-10 22:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
Patch to fix problem (740 bytes, patch)
2006-03-08 07:21 UTC, P B
Details

Note You need to log in before you can comment on or make changes to this bug.
Description P B 2006-03-08 07:14:28 UTC
Version:           SVN (using KDE KDE 3.5.0)
Installed from:    Slackware Packages
OS:                Linux

When you change the spinbox value for the number of away messages to remember, on the Behaviour config's Away Settings tab, it fails to enable the Apply button.

The attached patch corrects that.

It's my first KDE patch, so be gentle.

Thanks go to The Beta Band for their album Heroes To Zeros, which is excellent and entertained me whilst I tried to get my head around the what-connects-to-what of Qt/KDE code.
Comment 1 P B 2006-03-08 07:21:09 UTC
Created attachment 15002 [details]
Patch to fix problem
Comment 2 Olivier Goffart 2006-03-10 22:36:24 UTC
SVN commit 517393 by ogoffart:

Fix Bug 123259: "Remember Away Messages" spinbox not connected to Apply button
Patch from the reporter of the bug.
Thanks

BUG: 123259




 M  +2 -0      behaviorconfig.cpp  


--- branches/kopete/0.12/kopete/kopete/config/behavior/behaviorconfig.cpp #517392:517393
@@ -138,6 +138,8 @@
 		 this, SLOT(slotUpdatePluginLabel(int)));
 
 	// "Away" TAB ===============================================================
+	connect( mAwayConfigUI->rememberedMessages, SIGNAL(valueChanged(int)),
+		this, SLOT(slotValueChanged(int)));
 	connect( mAwayConfigUI->mAutoAwayTimeout, SIGNAL(valueChanged(int)),
 		this, SLOT(slotValueChanged(int)));
 	connect( mAwayConfigUI->mGoAvailable, SIGNAL(toggled(bool)),