Fix Bug 123259: "Remember Away Messages" spinbox not connected to Apply button Patch from the reporter of the bug. Thanks

BUG: 123259



svn path=/branches/kopete/0.12/kopete/; revision=517393